Add Google Analytics, Remove unused js, Adjust credits font-size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1135,6 +1135,10 @@ button:disabled,
   padding-left: 0;
 }
 
+#footer .copyright li:last-child {
+  font-size: 6px;
+}
+
 #footer .copyright a {
   color: inherit;
 }
